--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "mongoose": "^6.7.2",
     "path": "^0.12.7"
   }
 }
