--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "mongoose": "^6.7.2",
+    "nodemon": "^2.0.20",
     "path": "^0.12.7"
   }
 }
