--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "htmlparser": "^1.7.7",
     "http": "^0.0.1-security",
     "mongoose": "^6.7.2",
     "nodemon": "^2.0.20",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "soupselect": "^0.2.0"
   }
 }
