--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
     "htmlparser": "^1.7.7",
     "http": "^0.0.1-security",
     "mongoose": "^6.7.2",
