--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "http": "^0.0.1-security",
     "mongoose": "^6.7.2",
     "nodemon": "^2.0.20",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.88.2"
   }
 }
